Added navbar to all pages

--- a/psych.html
+++ b/psych.html
@@ -5,6 +5,13 @@
         <title>Psychology</title>
     </head>
 
+    <div id="navbar">
+        <a href="/home.html">Home</a>
+        <a href="personal.html">About Me</a>
+        <a href="/psych.html">Psychology</a>
+        <a href="/video.html">Videography</a>
+    </div>
+
     <body>
         Here are examples of my psychology interests and background
     </body>
