--- a/personal.html
+++ b/personal.html
@@ -5,6 +5,13 @@
         <title>About Me</title>
     </head>
 
+    <div id="navbar">
+        <a href="/home.html">Home</a>
+        <a href="personal.html">About Me</a>
+        <a href="/psych.html">Psychology</a>
+        <a href="/video.html">Videography</a>
+    </div>
+    
     <body>
         Here are some details about myself
     </body>
