--- a/video.html
+++ b/video.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <title>Videography</title>
+        <link rel="icon" type="image/png" href="/ABK_Favicon.png" sizes="32x32">
     </head>
 
     <div id="navbar">
