added css to page

--- a/home.html
+++ b/home.html
@@ -2,18 +2,18 @@
 
 <html>
     <head>
+        <link rel="stylesheet" href="styling.css">
         <title>Home</title>
-        <link rel="icon" type="image/png" href="/ABK_Favicon.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="/images/ABK_Favicon.png" sizes="32x32">
     </head>
 
-    <div id="navbar">
-        <a href="/home.html">Home</a>
-        <a href="personal.html">About Me</a>
-        <a href="/psych.html">Psychology</a>
-        <a href="/video.html">Videography</a>
+    <div id="header">
+        <h1><a href="/home.html" style="color: white">Aidan B. Keefe</a></h1>
     </div>
 
     <body>
-        Welcome to my website!
+        <a href="/personal.html" style="color: #140d63">About Me</a>
+        <a href="/psych.html" style="color: #140d63">Psychology</a>
+        <a href="/video.html" style="color: #140d63">Videography</a>
     </body>
 </html>
