--- a/video.html
+++ b/video.html
@@ -3,12 +3,12 @@
 <html>
     <head>
         <title>Videography</title>
-        <link rel="icon" type="image/png" href="/ABK_Favicon.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="/images/ABK_Favicon.png" sizes="32x32">
     </head>
 
     <div id="navbar">
         <a href="/home.html">Home</a>
-        <a href="personal.html">About Me</a>
+        <a href="/personal.html">About Me</a>
         <a href="/psych.html">Psychology</a>
         <a href="/video.html">Videography</a>
     </div>
