added in personal photos

--- a/home.html
+++ b/home.html
@@ -8,12 +8,18 @@
     </head>
 
     <div id="header">
-        <h1><a href="/home.html" style="color: white">Aidan B. Keefe</a></h1>
+        <a href="/home.html" style="color: white">Aidan B. Keefe</a>
+
+        <div id="homeImages">
+            <img src="/images/GradParty2021.jpg" alt="Aidan in a white button down with a black graduation sash" width="500">
+            <img src="/images/AidanGrad2024.jpg" alt="Aidan posed with diploma in graduation regalia, smiling" width="500">
+            <img src="/images/IMG_2779.jpg" alt="Aidan holding small model of R2D2 in front of a Star Wars poster" width="500">
+        </div>
     </div>
 
-    <body>
-        <a href="/personal.html" style="color: #140d63">About Me</a>
-        <a href="/psych.html" style="color: #140d63">Psychology</a>
-        <a href="/video.html" style="color: #140d63">Videography</a>
-    </body>
+    <div id="homeNav">
+        <a href="/psych.html" style="margin-right: 15%; color: #140d63;">Psychology</a>
+        <a href="/personal.html" style="margin-left: 15%; margin-right: 15%; color: #140d63;">About Me</a>
+        <a href="/video.html" style="margin-left: 15%; color: #140d63">Videography</a>
+    </div>
 </html>
