testing default page

--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
     </head>
 
     <div id="header">
-        <a href="/home.html" style="color: white">Aidan B. Keefe</a>
+        <a href="/index.html" style="color: white">Aidan B. Keefe</a>
 
         <div id="homeImages">
-            <img src="/images/GradParty2021.jpg" alt="Aidan in a white button down with a black graduation sash" width="500">
             <img src="/images/AidanGrad2024.jpg" alt="Aidan posed with diploma in graduation regalia, smiling" width="500">
-            <img src="/images/IMG_2779.jpg" alt="Aidan holding small model of R2D2 in front of a Star Wars poster" width="500">
         </div>
     </div>
 
