--- a/psych.html
+++ b/psych.html
@@ -7,7 +7,7 @@
     </head>
 
     <div id="navbar">
-        <a href="/home.html">Home</a>
+        <a href="/index.html">Home</a>
         <a href="/personal.html">About Me</a>
         <a href="/psych.html">Psychology</a>
         <a href="/video.html">Videography</a>
